--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 								<article>
 									<header>
 										
-										<h2>World of WarCraft 
+										<h2>World of WarCraft </b>
 										monster directory for android </a></h2>
 									</header>
 									<a href="https://github.com/bward033/BlizzardConsumer/tree/master/app" class="image fit"><img src="images/wow.jpg" alt="" /></a>
-									<p>Using Blizzard's API I created a list of World of WarCraft Monsters and stats  </p>
+									<p>Using Blizzard's API I created a list of World of WarCraft Monsters and stats.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/bward033/BlizzardConsumer/tree/master/app" class="button">Check it out</a></li>
 									</ul>
@@ -80,7 +80,7 @@
 										<h2>TooLazy</h2>
 									</header>
 									<a href="https://github.com/bward033/TooLazy" class="image fit"><img src="images/joao.jpg" alt="" /></a>
-									<p>Created a task manager for people to trade and sell house hold chores</p>
+									<p>Created a task manager for people to trade and sell house hold chores.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/bward033/TooLazy" class="button">Check it out</a></li>
 									</ul>
