fixed spelling of queues

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 										<h2>Worm/Snake </h2>
 									</header>
 									<a href="https://github.com/bward033/worm" class="image fit"><img src="images/worm.jpg" alt="" /></a>
-									<p>The classic mobile game Snake brought to the terminal using C++, using a verity of Data structures from stacks, cues and circular arrays.</p>
+									<p>The classic mobile game Snake brought to the terminal using C++, using a verity of Data structures from stacks, queues and circular arrays.</p>
 										<li><a href="https://github.com/bward033/worm" class="button">Check it out</a></li>
 									</ul>
 								</article>
